# pslvis

./: .gitignore  Dockerfile  Procfile  db.sqlite3  manage.py  notes.md  pyproject.toml  requirements.txt
app/: admin.py  apps.py  cors_middleware.py  forms.py  middleware.py  models.py  request_logging_middleware.py  urls.py  util.py  views.py
app/middleware/: __init__.py  cors_middleware.py  request_logging_middleware.py
app/migrations/: 0001_initial.py  0002_alter_dataset_name.py  0002_rename_name_experiment_dataset.py  0003_alter_experiment_id_alter_subject_id.py  0004_alter_pslparam_subject.py  0004_pslparam_name_alter_experiment_id_alter_subject_id.py  0005_experiment_internal_name.py  0005_pslparam_deleted_alter_experiment_id_and_more.py  0006_remove_dataset_filepath_dataset_filecontent.py  0007_experiment_params.py  0008_alter_experiment_params.py  0009_alter_experiment_params.py
app/models/: __init__.py  data.py  dataset.py  experiment  experiment.py  log.py  psl_param.py  psl_result.py  subject.py
app/templates/: history.pug  historybutton.pug  index.pug  model_as_table.pug  model_as_tree.pug  models.pug  pslresult.pug  tree.pug
app/views/: __init__.py  history.py  initialize.py  models.py  psl.py
dataset/: ACSIncome.csv  Recidivism_clean.csv  create_adult.ipynb  create_recidivism.ipynb  schüler.ipynb
experiment/: 1_performance_expert_hybrid_psl.ipynb  2_navigation_in_psl_space.ipynb  3_timelines.ipynb  PageTimes-2024-09-11-processed.csv  all_apps_wide-2024-09-16.csv
pslvis/: asgi.py  db.sqlite3  settings.py  urls.py
pslvis/pslvis/: settings.py  (+2 more)
(+14 files in other folders)
