[tool.poetry]
name = "pslvis"
version = "0.1.0"
description = ""
authors = ["Stefan <stefan.heid@lmu.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^5.0.4"
django-htmx = "^1.17.3"
django-tables2 = "^2.7.0"
scikit-psl = { git = "https://github.com/TRR318/scikit-psl.git", branch = "feature/visualize_psl" }
pypugjs = "^5.10.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
gunicorn = "^22.0.0"
django-cors-headers = "^4.3.1"
dj-database-url = "^2.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
